syntax = "proto3";
package dmoderation;

option go_package = "github.com/Neumann88/microservice-1";

service MicroserviceOneExample {
  rpc GetExampleMessage(ExampleMessageRequest) returns (ExampleMessageResponse) {
  }
}

message ExampleMessageRequest {
  int64 id = 1;
}

message ExampleMessageResponse {
  string value = 1;
}